infra/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-ingress
  labels:
    name: argocd-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.homelab.sb
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - backend:
              service:
                name: argocd-server
                port:
                  number: 80
            path: /api/dex/callback
            pathType: Prefix
  tls:
    - hosts:
        - argocd.homelab.sb
      secretName: argocd-tls-secret
